2011-09-06  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/gettimeofday.c [!SHARED]: Include
	<errno.h>.

2011-09-06  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: Add entry for getcpu
	syscall on x86-64.
	* sysdeps/unix/sysv/linux/x86_64/gettimeofday.c [!SHARED]: Use real
	syscall.
	* sysdeps/unix/sysv/linux/x86_64/time.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sched_getcpu.S [!SHARED]: Use real
	syscall if possible.

2011-09-05  Ulrich Drepper  <drepper@gmail.com>

	* elf/pldd.c (get_process_info): Don't read whole ELF header, just
	e_ident.  Don't pass to find_mapsXX.
	* elf/pldd-xx.c (find_mapsXX): Remove second parameter.

2011-07-20  Liubov Dmitrieva  <liubov.dmitrieva@intel.com>

	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strchr-sse2-no-bsf strrchr-sse2-no-bsf
	* sysdeps/x86_64/multiarch/strchr.S: Update.
	Check bit_slow_BSF bit.
	* sysdeps/x86_64/multiarch/strrchr.S: Likewise.
	* sysdeps/x86_64/multiarch/strchr-sse2-no-bsf.S: New file.
	* sysdeps/x86_64/multiarch/strrchr-sse2-no-bsf.S: New file.

2011-09-05  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13134]
	* sysdeps/posix/spawni.c (script_execute): Define only for compatibility
	before glibc 2.15.
	(tryshell): Define.
	(__spawni): Change last parameter to be flag.  Test
	SPAWN_XFLAGS_USE_PATH flag to use path or not.
	Don't try to use shell unless SPAWN_XFLAGS_TRY_SHELL is set.
	* sysdeps/mach/hurd/spawni.c: Change last parameter and adjust user.
	* posix/spawni.c: Likewise.
	* posix/spawn.c: Add compat version which passed SPAWN_XFLAGS_TRY_SHELL.
	* posix/spawnp.c: Likewise.  Change normal version to use
	SPAWN_XFLAGS_USE_PATH.
	* posix/spawn_int.c: Define SPAWN_XFLAGS_USE_PATH and
	SPAWN_XFLAGS_TRY_SHELL.

	[BZ #13150]
	* posix/glob.h: Remove gcc 1.x support.

	[BZ #13068]
	* elf/dl-misc.c (_dl_sysdep_read_whole_file): Use O_CLOEXEC.

2011-07-20  Liubov Dmitrieva  <liubov.dmitrieva@intel.com>
